[package]
name = "computation_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
petgraph = "0.6.3"
strum = { version = "0.25.0", features = ["derive"] }
urlencoding = "2.1.2"
uuid = {version="1.4.0", features=["v4"]}
webbrowser = "0.8.10"
